force-app/main/default/objects/PilarCitizenInteractions__c/PilarCitizenInteractions__c.object-meta.xml
<CustomObject>
    <label>PilarCitizenInteraction</label>
    <nameField>
        <displayFormat>PilarInteraction-{00000000}</displayFormat>
        <label>PilarCitizenInteraction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PilarCitizenInteractions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>