force-app/main/default/objects/PilarCitizenInteractions__c/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <label>DNI</label>
    <length>18</length>
    <type>Text</type>
</CustomField>