force-app/main/default/objects/PilarCitizenInteractions__c/fields/Fecha_Creacion_Registro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Creacion_Registro__c</fullName>
    <description>DateTime de creacion de registro en DB Ciudadanos_Actividades</description>
    <label>Fecha Creacion Registro</label>
    <type>DateTime</type>
</CustomField>