force-app/main/default/objects/PilarCitizenInteractions__c/fields/Fecha_Ultima_Modificacion_Registro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Modificacion_Registro__c</fullName>
    <description>fecha ultima modificacion del registro en Ciudadanos_Actividades</description>
    <label>Fecha Ultima Modificacion Registro</label>
    <type>DateTime</type>
</CustomField>