force-app/main/default/objects/PilarCitizenInteractions__c/fields/Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Date__c</fullName>
    <description>Fecha interaccion mimuni</description>
    <label>Interaction Date</label>
    <type>Date</type>
</CustomField>