force-app/main/default/objects/PilarCitizenInteractions__c/fields/Pilar360Citizen_SFID__c.field-meta.xml
<CustomField>
    <fullName>Pilar360Citizen_SFID__c</fullName>
    <description>M-D entre Pilar 360 ( Ciudadanos 360) y PilarCiudadanosActividades (sus actividades)</description>
    <label>Pilar360Citizen_SFID</label>
    <referenceTo>Pilar360__c</referenceTo>
    <relationshipName>PilarCiudadanosInteracciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>