force-app/main/default/objects/PilarCitizenInteractions__c/fields/PilarCiudadanoID__c.field-meta.xml
<CustomField>
    <fullName>PilarCiudadanoID__c</fullName>
    <label>PilarCiudadanoID</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>