force-app/main/default/objects/PilarCitizenInteractions__c/fields/PilarExtDatabase_ID__c.field-meta.xml
<CustomField>
    <fullName>PilarExtDatabase_ID__c</fullName>
    <externalId>true</externalId>
    <label>PilarExtDatabase ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>