force-app/main/default/objects/PilarCitizenInteractions__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>Programas</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>MiBarrio</fullName>
            </value>
            <value>
                <fullName>MiDocumentacion</fullName>
            </value>
            <value>
                <fullName>MiMascota</fullName>
            </value>
            <value>
                <fullName>MiSalud</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>