force-app/main/default/objects/PilarCitizenInteractions__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Servicios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Antigeno</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>PCR</fullName>
            </value>
            <value>
                <fullName>Turnos CDR DNI/Pasaporte</fullName>
            </value>
            <value>
                <fullName>Vacunate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>